# sudorust

./: Cargo.toml  README.md
data/: single4x4.txt  single9x9.txt  unsolved.txt  unsolved_16x16.txt  unsolved_25x25.txt  unsolved_4x4.txt  unsolved_9x9.txt  unsolved_all_sizes.txt
frontend/: vite.config.js
frontend/src/: App.jsx
frontend/src/components/: SudokuGrid.jsx
frontend/src/services/: BoardService.js
src/: board.rs  controller.rs  main.rs
src/board/: board.rs  mod.rs
